--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "dependencies": {
     "async": "^2.5.0",
-    "verium-bcoin": "^1.0.0",
+    "vcoin": "^1.0.0",
     "veriumd-rpc": "^0.7.1",
     "veriumcore-lib": "0.15.0",
     "veriumcore-p2p": "5.0.0",
